Removed reference to xml.

--- a/producers/alcatel_isis/template.conf
+++ b/producers/alcatel_isis/template.conf
@@ -22,4 +22,4 @@ password = not_so_secret_password
 
 [sources]
 remote = one.example.org two.example.org three.example.org
-local = /var/conf/one.xml /var/conf/two.xml /var/conf/three.xml
+local = /var/conf/isis_output /var/other_conf/isis_output
