Add arista parsing, fix juniper parsing

--- a/producers/nso/template.conf.dist
+++ b/producers/nso/template.conf.dist
@@ -3,3 +3,11 @@
 url=http://localhost:8080/api/running
 user=
 password=
+
+[routers]
+devices=
+device_groups=
+
+[switches]
+devices=
+device_groups=
